cot-macros/tests/ui/derive_from_request_parts_enum.rs
use cot::request::extractors::FromRequestParts;

#[derive(FromRequestParts)]
enum MyEnum {
    A,
    B,
}

fn main() {}
